# zenjxl-decoder

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEEDBACK.md  INTRINSICS_MIGRATION_PLAN.md  PARITY_INVESTIGATION.md  PR5_PLAN.md  PROPOSED_CONTRIBUTIONS.md  README.md  SAFE-PARALLEL-PLAN.md  SECURITY-VULNERABILITY-REPORT.md  TEST_GAP_ANALYSIS.md
ci/: author_check.sh
fuzz/: Cargo.toml  jxl.dict
fuzz/fuzz_targets/: decode.rs  decode_with_limits.rs  probe.rs
fuzz/regression/: leak-memory-tracker-decode-1  leak-memory-tracker-decode-with-limits
jxl/: Cargo.toml
jxl/benches/: tf_bench.rs
jxl/resources/test/: bike_web_q75.jxl  bike_web_q85.jxl  cafe_web_q80.jxl  forest_4k_q90.jxl  test_128x128_420_libjxl.jxl  test_16x16_jpeg_recompression.jxl
jxl/resources/test/synthetic/: alpha_16bit.jxl  colorspace_srgb.jxl  group_128.jxl  group_512.jxl  palette_lossy.jxl  palette_small.jxl  squeeze_default.jxl  synth_16bit_gray.jxl  synth_8bit_gray.jxl  vardct_effort9.jxl
jxl/src/: bit_reader.rs  error.rs  lib.rs
jxl/src/api/: color.rs  convenience.rs  decoder.rs  mod.rs  moxcms_wrapper.rs  options.rs
jxl/src/api/inner/: box_parser.rs  mod.rs
jxl/src/color/: tf.rs
jxl/src/container/: gain_map.rs
jxl/src/entropy_coding/: ans.rs  context_map.rs  decode.rs  huffman.rs  hybrid_uint.rs
jxl/src/features/: blending.rs  patches.rs  spline.rs
jxl/src/frame/: adaptive_lf_smoothing.rs  coeff_order.rs  decode.rs  group.rs  mod.rs  quant_weights.rs  render.rs
jxl/src/frame/modular/: mod.rs  predict.rs  tree.rs
jxl/src/headers/: frame_header.rs  size.rs
jxl/src/icc/: mod.rs
jxl/src/image/: data_type.rs  disjoint.rs  internal.rs  mod.rs  output_buffer.rs  raw.rs  typed.rs
jxl/src/jpeg/: data.rs  jbrd.rs  writer.rs
jxl/src/render/: buffer_splitter.rs  builder.rs  channels.rs  internal.rs  mod.rs  simd_utils.rs
jxl/src/render/low_memory_pipeline/: group_scheduler.rs  helpers.rs  mod.rs  render_group.rs  row_buffers.rs  run_stage.rs
jxl/src/render/simple_pipeline/: mod.rs
jxl/src/render/stages/: black.rs  chroma_upsample.rs  cms.rs  cms_cmyk.rs  convert.rs  from_linear.rs  gaborish.rs  mod.rs  noise.rs  premultiply_alpha.rs  splines.rs  spot.rs  to_linear.rs  tone_mapping.rs  unpremultiply_alpha.rs  upsample.rs  xyb.rs  ycbcr.rs
jxl/src/tests/: codec_corpus.rs  concurrency.rs  conformance.rs  convenience.rs  coverage_boost.rs  craft_poc.rs  decode_api.rs  entropy.rs  feature_corpus.rs  feature_tests.rs  hdr.rs  jpeg_reconstruction.rs  mod.rs  noise_test.rs  parity.rs  streaming.rs  synthetic.rs
jxl/src/transforms/: idct16.rs  idct2.rs  idct2d.rs  idct32.rs  idct4.rs  idct8.rs  idct_large.rs  reinterpreting_dct16.rs  reinterpreting_dct2.rs  reinterpreting_dct2d.rs  reinterpreting_dct32.rs  reinterpreting_dct4.rs  reinterpreting_dct8.rs  tests.rs  transform.rs
jxl/src/util/: fast_math.rs  memory_tracker.rs  mod.rs  profiling.rs  vec_helpers.rs
jxl/src/util/atomic_refcell/: internal.rs
jxl_simd/: Cargo.toml
jxl_simd/src/: lib.rs  scalar.rs
jxl_simd/src/aarch64/: neon.rs
jxl_simd/src/wasm32/: mod.rs  simd128.rs
jxl_simd/src/x86_64/: avx.rs  avx512.rs  sse42.rs
jxl_transforms/: Cargo.toml
jxl_transforms/benches/: dct.rs
jxl_transforms/src/: lib.rs  tests.rs  transform.rs
zenjxl-decoder/: Cargo.toml
zenjxl-decoder-cli/: Cargo.toml
zenjxl-decoder-cli/benches/: decode.rs
zenjxl-decoder-cli/src/: cms.rs  lib.rs  main.rs
zenjxl-decoder-cli/src/dec/: mod.rs
zenjxl-decoder-cli/src/enc/: numpy.rs  png.rs
zenjxl-decoder-macros/: Cargo.toml
zenjxl-decoder-macros/src/: lib.rs
zenjxl-decoder-simd/: Cargo.toml
zenjxl-decoder-simd/src/: scalar.rs
zenjxl-decoder-simd/src/aarch64/: mod.rs
zenjxl-decoder-simd/src/x86_64/: avx.rs  avx512.rs  mod.rs  sse42.rs
zenjxl-decoder/benches/: decode_bench.rs  tf_bench.rs
zenjxl-decoder/fuzz/: Cargo.toml
zenjxl-decoder/fuzz/fuzz_targets/: decode.rs
zenjxl-decoder/resources/test/: bicycles_web_q85.jxl  city_4k_q75.jxl  city_4k_q90.jxl  clic_landscape_d1.jxl  clic_landscape_d2.jxl  clic_portrait_d1.jxl  clic_portrait_d2.jxl  clic_square_d1.jxl  clic_square_d2.jxl  clic_wide_d1.jxl  clic_wide_d2.jxl  landscape_4k_q90.jxl  portrait_4k_q75.jxl  test_128x128_444_libjxl.jxl  test_64x64_420_jpeg_recompression.jxl  test_8x8_444_jpeg_recompression.jxl
zenjxl-decoder/resources/test/synthetic/: alpha_gray.jxl  alpha_rgba.jxl  group_1024.jxl  group_256.jxl  palette_forced.jxl  palette_indexed.jxl  synth_16bit.jxl  vardct_effort1.jxl  vardct_q50.jxl  vardct_q90.jxl
zenjxl-decoder/src/: bit_reader.rs  error.rs  lib.rs
zenjxl-decoder/src/api/: color.rs  convenience.rs  data_types.rs  decoder.rs  moxcms_wrapper.rs  options.rs
zenjxl-decoder/src/api/inner/: box_parser.rs  mod.rs
zenjxl-decoder/src/color/: tf.rs
zenjxl-decoder/src/container/: gain_map.rs  mod.rs
zenjxl-decoder/src/entropy_coding/: ans.rs  decode.rs  huffman.rs  hybrid_uint.rs
zenjxl-decoder/src/features/: blending.rs  epf.rs  patches.rs  spline.rs
zenjxl-decoder/src/frame/: decode.rs  group.rs  lf_preview.rs  mod.rs  quant_weights.rs  quantizer.rs  render.rs
zenjxl-decoder/src/headers/: encodings.rs  extra_channels.rs  frame_header.rs  image_metadata.rs  permutation.rs  size.rs  toc.rs
zenjxl-decoder/src/icc/: mod.rs
zenjxl-decoder/src/image/: internal.rs  mod.rs  output_buffer.rs  raw.rs  rect.rs  test.rs  typed.rs
zenjxl-decoder/src/jpeg/: data.rs  mod.rs
zenjxl-decoder/src/render/: buffer_splitter.rs  builder.rs  channels.rs  mod.rs
zenjxl-decoder/src/tests/: basic_info_profile_guard.rs  codec_corpus.rs  concurrency.rs  conformance.rs  decode_api.rs  entropy.rs  feature_corpus.rs  feature_tests.rs  jpeg_reconstruction.rs  mod.rs  noise_test.rs  oom_regression.rs  output_buffer_constructors.rs  parity.rs
zenjxl-decoder/src/transforms/: idct16.rs  idct2.rs  idct2d.rs  idct8.rs  idct_large.rs  reinterpreting_dct2d.rs  tests.rs
zenjxl-decoder/src/util/: cacheline.rs  concat_slice.rs  fast_math.rs  float16.rs  linalg.rs  memory_tracker.rs  mod.rs  profiling.rs  test.rs  vec_helpers.rs  xorshift128plus.rs
(+77 files in other folders)
