[profile.release]
debug = true
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
lto = "thin"
codegen-units = 1

[workspace]
members = ["jxl", "jxl_cli", "jxl_macros", "jxl_simd", "jxl_transforms"]
resolver = "2"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
