[profile.release]
debug = true
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
lto = "thin"
codegen-units = 1

[workspace]
members = ["zenjxl-decoder", "zenjxl-decoder-cli", "zenjxl-decoder-macros", "zenjxl-decoder-simd"]
resolver = "2"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
