[package]
name = "zenjxl-decoder"
description = "High performance Rust implementation of a JPEG XL decoder"
version = "0.3.0"
readme = "../README.md"
keywords = ["jpeg-xl", "decoder"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>"]
repository = "https://github.com/imazen/zenjxl-decoder"
edition = "2024"
license = "BSD-3-Clause"

exclude = ["resources/"]

[dependencies]
thiserror = "2.0"
byteorder = "1.4.3"
num-derive = "0.4"
num-traits = "0.2.14"
array-init = "2.0.0"
tracing = { version = "0.1.40", optional = true }
jxl_macros = { package = "zenjxl-decoder-macros", path = "../jxl_macros", version = "=0.3.0" }
jxl_simd = { package = "zenjxl-decoder-simd", path = "../jxl_simd", version = "=0.3.0" }
moxcms = { version = "0.7", optional = true }
rayon = { version = "1.10", optional = true }
aligned-vec = "0.6"
bytemuck = { version = "1", features = ["derive"] }
atomic_refcell = "0.1"
smallvec = "1"
enough = { version = "0.4", features = ["std"] }
brotli = { version = "8.0", default-features = false, features = ["std"], optional = true }
paste = "1"

[dev-dependencies]
arbtest = "0.3.2"
png = "0.17"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_xorshift = "0.4.0"
almost-enough = { version = "0.4", features = ["std"] }
serde_json = "1.0"
test-log = { version = "0.2.16", features = ["trace"] }
jxl_macros = { package = "zenjxl-decoder-macros", path = "../jxl_macros", version = "=0.3.0", features = ["test"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
all-simd = ["jxl_simd/all-simd", "sse42", "avx", "avx512", "neon"]
profiling = []
sse42 = ["jxl_simd/sse42"]
avx = ["jxl_simd/avx"]
avx512 = ["jxl_simd/avx512"]
neon = ["jxl_simd/neon"]
cms = ["moxcms"]
jpeg = ["dep:brotli"]
allow-unsafe = []
threads = ["rayon", "allow-unsafe"]

[[bench]]
name = "tf_bench"
harness = false

[lints]
workspace = true
