[package]
name = "zenjxl-decoder-transforms"
description = "DCT/IDCT transforms for the zenjxl-decoder JPEG XL decoder"
version = "0.3.0"
readme = "../README.md"
keywords = ["jpeg-xl", "simd", "dct"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>"]
repository = "https://github.com/imazen/zenjxl-decoder"
edition = "2024"
license = "BSD-3-Clause"

[lib]
name = "jxl_transforms"

[dependencies]
jxl_simd = { package = "zenjxl-decoder-simd", path = "../jxl_simd", version = "=0.3.0" }
paste = "1"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
test-log = "0.2.14"
rand = "0.9.2"
rand_chacha = "0.9.0"

[features]
all-simd = ["jxl_simd/all-simd", "sse42", "avx", "avx512", "neon"]
sse42 = ["jxl_simd/sse42"]
avx = ["jxl_simd/avx"]
avx512 = ["jxl_simd/avx512"]
neon = ["jxl_simd/neon"]

[[bench]]
name = "dct"
harness = false

[lints]
workspace = true
