[package]
name = "zenjxl-decoder-macros"
description = "Proc macros for the zenjxl-decoder JPEG XL decoder"
version = "0.3.6"
readme = "../README.md"
keywords = ["jpeg-xl", "decoder"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>", "Lilith River <lilith@imazen.io>"]
repository = "https://github.com/imazen/zenjxl-decoder"
edition = "2024"
rust-version = "1.89"
license = "BSD-3-Clause"
exclude = ["CLAUDE.md", "CONTEXT-HANDOFF.md", "FEEDBACK.md", ".claude/", ".superwork/", ".zenbench/", "copter-report/", ".github/", "Cross.toml", "justfile", "Cargo.toml.original.txt", "fuzz/"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.90", features = ["extra-traits", "full"] }

[lints]
workspace = true

[features]
test = []
