[package]
name = "zenjxl-decoder-simd"
description = "SIMD abstraction layer for the zenjxl-decoder JPEG XL decoder"
version = "0.3.5"
readme = "../README.md"
keywords = ["jpeg-xl", "simd"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>", "Lilith River <lilith@imazen.io>"]
repository = "https://github.com/imazen/zenjxl-decoder"
edition = "2024"
rust-version = "1.89"
license = "BSD-3-Clause"
exclude = ["CLAUDE.md", "CONTEXT-HANDOFF.md", "FEEDBACK.md", ".claude/", ".superwork/", ".zenbench/", "copter-report/", ".github/", "Cross.toml", "justfile", "Cargo.toml.original.txt", "fuzz/"]

[dependencies]
archmage = { version = "0.9"}
paste = "1"

[dev-dependencies]
arbtest = "0.3.2"

[features]
all-simd = ["sse42", "avx", "avx512", "neon", "wasm128"]
sse42 = []
avx = ["sse42"]
avx512 = ["avx", "archmage/avx512"]
neon = []
wasm128 = []

[lints]
workspace = true
