[package]
name = "zenjxl-decoder"
description = "High performance Rust implementation of a JPEG XL decoder"
version = "0.3.7"
readme = "../README.md"
keywords = ["jpeg-xl", "decoder"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>", "Lilith River <lilith@imazen.io>"]
repository = "https://github.com/imazen/zenjxl-decoder"
edition = "2024"
rust-version = "1.89"
license = "BSD-3-Clause"

include = ["/src/**", "/tests/**", "/benches/**", "/LICENSE*"]

[dependencies]
thiserror = "2.0"
byteorder = "1.4.3"
num-derive = "0.4"
num-traits = "0.2.14"
array-init = "2.0.0"
tracing = { version = "0.1.40", optional = true }
jxl_macros = { package = "zenjxl-decoder-macros", path = "../zenjxl-decoder-macros", version = "=0.3.7" }
jxl_simd = { package = "zenjxl-decoder-simd", path = "../zenjxl-decoder-simd", version = "=0.3.7" }
moxcms = { version = "0.8.1", optional = true, features = ["extended_range", "options"] }
rayon = { version = "1.10", optional = true }
aligned-vec = "0.6"
bytemuck = { version = "1", features = ["derive"] }
atomic_refcell = "0.1"
smallvec = "1"
enough = { version = "0.4", features = ["std"] }
brotli = { version = "8.0", default-features = false, features = ["std"], optional = true }
paste = "1"

[dev-dependencies]
arbtest = "0.3.2"
png = "0.18.1"
rand = "0.10.0"
rand_chacha = "0.10.0"
rand_xorshift = "0.5.0"
almost-enough = { version = "0.4", features = ["std"] }
serde_json = "1.0"
test-log = { version = "0.2.16", features = ["trace"] }
jxl_macros = { package = "zenjxl-decoder-macros", path = "../zenjxl-decoder-macros", version = "=0.3.7", features = ["test"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
zenbench = { version = "0.1.2"}

[features]
default = ["all-simd"]

all-simd = ["jxl_simd/all-simd", "sse42", "avx", "avx512", "neon", "wasm128"]
profiling = []
sse42 = ["jxl_simd/sse42"]
avx = ["jxl_simd/avx"]
avx512 = ["jxl_simd/avx512"]
neon = ["jxl_simd/neon"]
wasm128 = ["jxl_simd/wasm128"]
cms = ["moxcms"]
jpeg = ["dep:brotli"]
allow-unsafe = []
threads = ["rayon"]

[[bench]]
name = "tf_bench"
harness = false

[[bench]]
name = "decode_bench"
harness = false

[lints]
workspace = true
